    - add code to reselect the app in the list view on
      a tree model refresh
  * softwarecenter/view/widgets/pathbar2.py:
    - remove explicit callback when a button is appended
      to the pathbar as it is not needed

  [ Michael Vogt ]
  * softwarecenter/apt/aptcache.py:
    - properly fix removal warning (needs latest python-apt)
  * debian/control:
    - depend on latest python-apt

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 13 Jan 2010 14:48:49 +0100

software-center (1.1.8) lucid; urgency=low

  * softwarecenter/view/appdetailsview.py:
    - replace thumbnail checking thread with (much nicer) gio
      code
  * softwarecenter/app.py:
    - simplify state save logic
    - save window size
    - fix crash in ConfigParser (LP: #494899)
  * softwarecenter/view/installedpane.py:
    - fix search in installed section (LP: #504380)
  * softwarecenter/apt/aptcache.py:
    - fix missing warning on removal for non-english systems
      (LP: #486474)
  * softwarecenter/view/widgets/imagedialog.py:
    - fix crash because of missing import

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 13 Jan 2010 14:39:35 +0100

software-center (1.1.7) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/availablepane.py:
    - fixes in the search when in a category with sub-categories
  * data/software-center.menu.in:
    - use SCDontDisplay and SCType in System Packages menu to
      allow searching in all system packages again
  * README:
    - updated to include section term
  * data/software-center.menu.in:
    - move the previous seperate applications.menu in here to support 
      subcategories that mix applications and non-applications
      this makes /usr/share/app-install/desktop/applications.menu
      obsolete for software-center
    - update to reflect the sub-category layout from the spec
  * softwarecenter/db/database.py:
    - fix sorting for mixed app/package display
  * softwarecenter/db/update.py: