@@ -14,6 +14,9 @@ software-center (1.1.9) UNRELEASED; urgency=low
     - properly fix removal warning (needs latest python-apt)
   * debian/control:
     - depend on latest python-apt
+  * merged lp:~mmcg069/software-center/matts-pathbar-integration
+    Many thanks to Matthew McGowan
+    This gives us much nicer layout and a popcon column
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 13 Jan 2010 14:48:49 +0100
 
